--- a/.eslintrc
+++ b/.eslintrc
@@ -1,46 +1,47 @@
----
-parser: babel-eslint
+{
+  "parser": "babel-eslint",
 
-extends:
-  - ./node_modules/fbjs-scripts/eslint/.eslintrc
+  "plugins": [
+    "react"
+  ],
 
-plugins:
-  - react
+  "globals": {
+    "React$Element": false
+  },
 
-globals:
-  React$Element: false
+  rules: {
+    "brace-style": [2, "1tbs"],
+    "comma-dangle": [2, "always-multiline"],
+    "consistent-return": 2,
+    "dot-location": [2, "property"],
+    "dot-notation": 2,
+    "eol-last": 2,
+    "indent": [2, 2, {"SwitchCase": 1}],
+    "jsx-quotes": 2,
+    "no-multi-spaces": 2,
+    "no-redeclare": 2,
+    "no-shadow": 2,
+    "no-unused-expressions": 2,
+    "no-unused-vars": [2, {"args": "none"}],
+    "prefer-const": 2,
+    "quotes": [2, "single", "avoid-escape"],
+    "space-after-keywords": 2,
+    "space-before-blocks": 2,
+    "space-before-function-paren": 2,
+    "strict": [2, "global"],
 
-rules:
-  brace-style: [2, 1tbs]
-  comma-dangle: [2, always-multiline]
-  consistent-return: 2
-  dot-location: [2, property]
-  dot-notation: 2
-  eol-last: 2
-  indent: [2, 2, {SwitchCase: 1}]
-  jsx-quotes: 2
-  no-multi-spaces: 2
-  no-redeclare: 2
-  no-shadow: 2
-  no-unused-expressions: 2
-  no-unused-vars: [2, {args: none}]
-  prefer-const: 2
-  quotes: [2, single, avoid-escape]
-  space-after-keywords: 2
-  space-before-blocks: 2
-  space-before-function-paren: 2
-  strict: [2, global]
-
-  # JSX
-  # Our transforms set this automatically
-  react/display-name: 0
-  react/jsx-boolean-value: [2, always]
-  react/jsx-no-undef: 2
-  react/jsx-sort-prop-types: 0
-  react/jsx-sort-props: 0
-  react/jsx-uses-react: 2
-  react/jsx-uses-vars: 2
-  react/no-unknown-property: 2
-  react/react-in-jsx-scope: 2
-  react/self-closing-comp: 2
-  react/wrap-multilines: [2, {declaration: false, assignment: false}]
+    // JSX
+    // Our transforms set this automatically
+    "react/display-name": 0,
+    "react/jsx-boolean-value": [2, "always"],
+    "react/jsx-no-undef": 2,
+    "react/jsx-sort-prop-types": 0,
+    "react/jsx-sort-props": 0,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
+    "react/no-unknown-property": 2,
+    "react/react-in-jsx-scope": 2,
+    "react/self-closing-comp": 2,
+    "react/wrap-multilines": [2, {"declaration": false, "assignment": false}]
+  }
+}
