--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
+  "presets": [
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-es2015-modules-commonjs",
+    "transform-es2015-function-name"
+  ]
 }
