--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-react-devtools",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "React DevTools Extension for Electron",
   "main": "./api.js",
   "repository": {
@@ -21,6 +21,9 @@
     "React"
   ],
   "homepage": "https://github.com/electron/electron-react-devtools#readme",
+  "dependencies": {
+    "ws": "*"
+  },
   "devDependencies": {
     "babel-core": "6.9.0",
     "babel-eslint": "6.0.4",
@@ -29,8 +32,6 @@
     "babel-plugin-transform-es2015-function-name": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "babel-plugin-transform-remove-console": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "classnames": "2.2.5",
