--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,26 @@
   },
 
   "devtools_page": "main.html",
-  "web_accessible_resources": [ "main.html", "panel.html", "build/inject.js", "build/backend.js"]
+
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "web_accessible_resources": [ "main.html", "panel.html", "build/backend.js"],
+
+  "background": {
+    "scripts": [ "build/background.js" ],
+    "persistent": false
+  },
+
+  "permissions": [
+    "file:///*",
+    "http://*/*",
+    "https://*/*"
+  ],
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["build/inject.js"],
+      "run_at": "document_start"
+    }
+  ]
 }
