--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-react-devtools",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "React DevTools Extension for Electron",
   "main": "./api.js",
   "repository": {
@@ -25,36 +25,32 @@
     "React"
   ],
   "homepage": "https://github.com/electron/electron-react-devtools#readme",
-  "dependencies": {
-    "es6-symbol": "3.0.2",
-    "fbjs": "0.8.2",
-    "immutable": "3.8.1",
-    "object-assign": "4.1.0",
-    "portfinder": "^1.0.3",
-    "ws": "^1.1.0"
-  },
   "devDependencies": {
-    "babel-core": "6.9.0",
+    "babel-core": "6.3.21",
     "babel-eslint": "6.0.4",
-    "babel-jest": "12.1.0",
-    "babel-loader": "6.2.4",
+    "babel-jest": "6.0.1",
+    "babel-loader": "6.2.0",
     "babel-plugin-transform-remove-console": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-0": "6.5.0",
-    "classnames": "2.2.5",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-0": "6.3.13",
+    "classnames": "2.2.1",
+    "es6-symbol": "3.0.2",
     "eslint": "2.10.2",
     "eslint-plugin-react": "5.1.1",
+    "fbjs": "0.5.1",
     "fbjs-scripts": "0.7.0",
     "flow-bin": "0.23.0",
-    "jest-cli": "12.1.0",
+    "immutable": "3.7.6",
+    "jest-cli": "0.9.0-fb2",
     "json-loader": "0.5.4",
-    "node-libs-browser": "1.0.0",
+    "node-libs-browser": "0.5.3",
+    "object-assign": "4.0.1",
     "raw-loader": "^0.5.1",
-    "react": "15.1.0",
-    "react-addons-create-fragment": "15.1.0",
-    "react-dom": "15.1.0",
-    "webpack": "1.13.1"
+    "react": "0.14.3",
+    "react-addons-create-fragment": "0.14.3",
+    "react-dom": "0.14.3",
+    "webpack": "1.12.9"
   },
   "scripts": {
     "backend": "NODE_ENV=production webpack --config scripts/webpack.backend.js",
