--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-react-devtools",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "React DevTools Extension for Electron",
   "main": "./api.js",
   "repository": {
@@ -25,41 +25,6 @@
     "React"
   ],
   "homepage": "https://github.com/electron/electron-react-devtools#readme",
-  "dependencies": {
-    "adm-zip": "^0.4.7",
-    "babel-core": "6.3.21",
-    "babel-eslint": "6.0.4",
-    "babel-jest": "6.0.1",
-    "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-0": "6.3.13",
-    "child-process-promise": "^2.2.1",
-    "classnames": "2.2.1",
-    "cli-spinners": "^1.0.0",
-    "clipboard-js": "^0.3.3",
-    "es6-symbol": "3.0.2",
-    "eslint": "2.10.2",
-    "eslint-plugin-react": "5.1.1",
-    "fbjs": "0.5.1",
-    "fbjs-scripts": "0.7.0",
-    "flow-bin": "0.23.0",
-    "fs-extra": "^3.0.1",
-    "gh-pages": "^1.0.0",
-    "immutable": "3.7.6",
-    "jest-cli": "0.9.0-fb2",
-    "json-loader": "0.5.4",
-    "log-update": "^2.0.0",
-    "node-libs-browser": "0.5.3",
-    "object-assign": "4.0.1",
-    "raw-loader": "^0.5.1",
-    "react": "15.4.2",
-    "react-addons-create-fragment": "15.4.2",
-    "react-color": "^2.11.7",
-    "react-dom": "15.4.2",
-    "react-portal": "^3.1.0",
-    "webpack": "1.12.9"
-  },
   "scripts": {
     "build": "node ./scripts/build",
     "deploy": "cd ./shells/theme-preview && ./build.sh && gh-pages -d .",
@@ -86,9 +51,42 @@
     ]
   },
   "devDependencies": {
+    "adm-zip": "^0.4.7",
+    "babel-core": "6.3.21",
+    "babel-eslint": "6.0.4",
+    "babel-jest": "6.0.1",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-0": "6.3.13",
     "chrome-launch": "^1.1.4",
+    "child-process-promise": "^2.2.1",
+    "classnames": "2.2.1",
+    "cli-spinners": "^1.0.0",
+    "clipboard-js": "^0.3.3",
+    "es6-symbol": "3.0.2",
+    "eslint": "2.10.2",
+    "eslint-plugin-react": "5.1.1",
+    "fbjs": "0.5.1",
+    "fbjs-scripts": "0.7.0",
     "firefox-profile": "^1.0.2",
+    "flow-bin": "0.23.0",
+    "fs-extra": "^3.0.1",
+    "gh-pages": "^1.0.0",
+    "immutable": "3.7.6",
+    "jest-cli": "0.9.0-fb2",
+    "json-loader": "0.5.4",
     "lerna": "2.0.0-beta.36",
-    "web-ext": "^1.10.1"
+    "log-update": "^2.0.0",
+    "node-libs-browser": "0.5.3",
+    "object-assign": "4.0.1",
+    "raw-loader": "^0.5.1",
+    "react": "15.4.2",
+    "react-addons-create-fragment": "15.4.2",
+    "react-color": "^2.11.7",
+    "react-dom": "15.4.2",
+    "react-portal": "^3.1.0",
+    "web-ext": "^1.10.1",
+    "webpack": "1.12.9"
   }
 }
